--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = ">=3.11"
 pyserial = "^3.5"
 semver = "^3.0.0"
 hid = "^1.0.8"
+pyusb = "^1.2.1"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.5.0"
