--- a/ruff.toml
+++ b/ruff.toml
@@ -1,12 +1,11 @@
-[tool.ruff]
 line-length = 88
 target-version = "py311"
 
-[tool.ruff.lint]
+[lint]
 select = ["E", "F", "W", "I"]
 ignore = []
 
-[tool.ruff.format]
+[format]
 quote-style = "double"
 indent-style = "space"
 skip-magic-trailing-comma = false
