--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,12 +11,17 @@ pyserial = "^3.5"
 semver = "^3.0.0"
 hid = "^1.0.8"
 pyusb = "^1.2.1"
+packaging = "^23.0"
+betterproto = "*"
+httpx = "^0.24.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.5.0"
 black = "^24.4.2"
 mypy = "^1.10.0"
 pytest = "^8.2.2"
+pytest-asyncio = "^1.1.0"
+hypothesis = "^6.127.4"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
