fix prebuild scripts and proto generated types

--- a/.gitignore
+++ b/.gitignore
@@ -42,4 +42,8 @@ thumbs.db
 # Jupyter Notebook
 .ipynb_checkpoints
 
+# Generated protobuf files
+packages/core/src/encoders/proto/generated/
+packages/app_manager/src/proto/generated/
+
 
