--- a/packages/app_btc/pyproject.toml
+++ b/packages/app_btc/pyproject.toml
@@ -1,21 +1,16 @@
 [tool.poetry]
-name = "cypherock-sdk-monorepo"
+name = "cypherock-sdk-app-btc"
 version = "0.1.0"
-description = "python-sdk"
+description = "Bitcoin app for Cypherock SDK"
 authors = ["Temiloluwa Yusuf <ytemiloluwa@gmail.com>"]
 readme = "README.md"
+packages = [{include = "src"}]
 
 [tool.poetry.dependencies]
 python = ">=3.11"
-pyserial = "^3.5"
-semver = "^3.0.0"
-hid = "^1.0.8"
-pyusb = "^1.2.1"
-packaging = "^23.0"
-betterproto = "^1.2.5"
-httpx = "^0.24.0"
 python-bitcointx = "^1.1.5"
 btclib = "^2023.7.12"
+httpx = "^0.24.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.5.0"
@@ -23,8 +18,6 @@ black = "^24.4.2"
 mypy = "^1.10.0"
 pytest = "^8.2.2"
 pytest-asyncio = "^1.1.0"
-hypothesis = "^6.127.4"
-betterproto = { version = "^1.2.5", extras = ["compiler"] }
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
@@ -48,4 +41,4 @@ filterwarnings = [
     "ignore::RuntimeWarning",
     "ignore:.*Task exception was never retrieved.*:RuntimeWarning",
     "ignore:.*coroutine.*was never awaited.*:RuntimeWarning",
-] 
+]
