--- a/packages/app_btc/pyproject.toml
+++ b/packages/app_btc/pyproject.toml
@@ -8,19 +8,29 @@ packages = [{include = "src"}]
 
 [tool.poetry.dependencies]
 python = ">=3.11"
+# Bitcoin libraries
 bitcoinlib = "^0.7.5"
-httpx = "^0.24.0"
+python-bitcointx = "^1.1.4"
+coincurve = "^20.0.0"
 base58 = "^2.1.1"
 ecdsa = "^0.18.0"
 bech32 = "^1.2.0"
-coincurve = "^20.0.0"
+# HTTP client
+httpx = "^0.24.0"
+# Cryptography
+cryptography = "^41.0.0"
+# Protobuf
+betterproto = "^1.2.5"
+protobuf = "^4.24.0"
+
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.5.0"
 black = "^24.4.2"
 mypy = "^1.10.0"
 pytest = "^8.2.2"
-pytest-asyncio = "^1.1.0"
+pytest-asyncio = "^0.23.0"
+
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
